# whofi

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  GITHUB_SETUP.md  GitHub_Repository_Index.md  IMPLEMENTATION_ROADMAP.md  INTEGRATION_SUMMARY.md  Key_Code_Samples.md  LICENSE  README-original.md  README.md  Research_Summary.md  arduino_csi_advanced.ino  arduino_csi_example.ino  arduino_csi_positioning.ino  arduino_rssi_human_detection.ino  csi_visualization_example.py  docker-compose.yml  esphome_csi_component.h  esphome_csi_config.yaml  final_youtube_research_report.py  fixed_youtube_downloader.py  practical_csi_wifi_example.ino  real_youtube_videos.py  safe_csi_payload_template.c  test_youtube_api.py  whofi_videos_list.py  wokwi_whofi_example.ino  youtube_research.py  youtube_transcript_downloader.py
antennas/: ANTENNA_UPGRADE_GUIDE.md  external_antenna_analysis.md
apartment/: APARTMENT_POSITIONING_SYSTEM.md
architecture/: complete_system_design.md
basic/: ESP32_BUILTIN_REALISTIC_ACCURACY.md  esp32_builtin_antenna_analysis.md
csi-firmware/: .gitignore  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  run_tests.sh  sdkconfig.defaults  (+2 more)
csi-firmware/components/csi_collector/: CMakeLists.txt
csi-firmware/components/csi_collector/include/: csi_collector.h
csi-firmware/components/csi_collector/src/: csi_buffer.c  csi_buffer.h  csi_collector.c  csi_filter.c  csi_filter.h
csi-firmware/components/csi_collector/test/: test_csi_collector.c
csi-firmware/components/mqtt_client/: CMakeLists.txt
csi-firmware/components/mqtt_client/include/: mqtt_client_wrapper.h
csi-firmware/components/mqtt_client/src/: mqtt_client_wrapper.c  mqtt_publisher.c  mqtt_subscriber.c
csi-firmware/components/mqtt_client/test/: test_mqtt_client.c
csi-firmware/components/ntp_sync/: CMakeLists.txt
csi-firmware/components/ntp_sync/include/: ntp_sync.h
csi-firmware/components/ntp_sync/src/: ntp_client.c  ntp_sync.c
csi-firmware/components/ntp_sync/test/: test_ntp_sync.c
csi-firmware/components/ota_updater/: CMakeLists.txt
csi-firmware/components/ota_updater/include/: ota_updater.h
csi-firmware/components/ota_updater/src/: ota_client.c  ota_updater.c  ota_verify.c
csi-firmware/components/ota_updater/test/: test_ota_updater.c
csi-firmware/components/web_server/: CMakeLists.txt
csi-firmware/components/web_server/include/: web_server.h
csi-firmware/components/web_server/src/: api_auth.c  api_handlers.c  api_handlers_fixes.c  config_html.h  index_html.h  status_html.h  web_server.c
csi-firmware/components/web_server/test/: test_web_server.c
csi-firmware/main/: CMakeLists.txt  app_config.c  app_config.h  main.c  remote_config.c  system_init.c  system_init.h
(+143 files in other folders)
