# Web Server Component CMakeLists.txt
idf_component_register(
    SRCS 
        "src/web_server.c"
        "src/web_handlers.c"
        "src/web_auth.c"
    INCLUDE_DIRS 
        "include"
    PRIV_INCLUDE_DIRS
        "src"
    REQUIRES 
        "esp_http_server"
        "esp_wifi"
        "esp_event"
        "json"
        "spiffs"
        "nvs_flash"
    PRIV_REQUIRES
        "unity"
)